# survey

create_kml_file/: Cargo.toml
create_kml_file/src/: main.rs
data/: Places.kml  parcel1_bearing_distance.txt  parcel1_bearing_distance_noname.txt  parcel1_start_ky_grid.txt  parcel1_start_lat_lon.txt  parcel2_bearing_distance.txt  parcel2_bearing_distance_noname.txt  parcel2_start_ky_grid.txt  parcel2_start_lat_lon.txt
